Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <div class="logo">Mahfuzur<span>Rahman</span></div>
+            <img src="image/horizontal logo.png" alt="Your Logo" width="268" height="46">
             <div class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
@@ -710,7 +710,7 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <div class="logo">Mahfuzur<span>Rahman</span></div>
+                <img src="image/horizontal logo.png" alt="Your Logo" width="268" height="46">
                 <p>Professional Graphic Designer | 3 Years Experience</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/asim.mahfuzurrahman" class="social-icon">
